# controllers/authController.js
@@ -1,72 +1,0 @@
-import { HttpError } from "../helpers/index.js";
-import { ctrlWrapper } from "../decorators/index.js";
-import User from "../models/user.js";
-import bcrypt from "bcryptjs";
-import gravatar from "gravatar";
-import "dotenv/config";
-import jwt from "jsonwebtoken";
-
-const { JWT_SECRET } = process.env;
-
-const signup = async (req, res) => {
-  const { email, password } = req.body;
-  const user = await User.findOne({ email });
-  if (user) {
-    throw HttpError(409, "Email in use");
-  }
-  const hashPassword = await bcrypt.hash(password, 10);
-  const avatarUrl = gravatar.url(email);
-  console.log(avatarUrl);
-  const newUser = await User.create({
-    ...req.body,
-    password: hashPassword,
-    avatarURL: avatarUrl,
-  });
-  res.status(201).json({
-    name: newUser.name,
-    email: newUser.email,
-  });
-};
-
-const signin = async (req, res) => {
-  const { email, password } = req.body;
-  const user = await User.findOne({ email });
-  if (!user) {
-    throw HttpError(401, "Email or password invalid");
-  }
-  const passwordCompare = await bcrypt.compare(password, user.password);
-  if (!passwordCompare) {
-    throw HttpError(401, "Email or password invalid");
-  }
-
-  const payload = {
-    id: user._id,
-  };
-  const token = jwt.sign(payload, JWT_SECRET, { expiresIn: "23h" });
-  await User.findByIdAndUpdate(user._id, { token });
-  res.json({
-    token,
-  });
-};
-
-const getCurrent = (req, res) => {
-  const { name, email, avatarURL } = req.user;
-  res.json({
-    name,
-    email,
-    avatarURL,
-  });
-};
-
-const signout = async (req, res) => {
-  const { _id } = req.user;
-  await User.findByIdAndUpdate(_id, { token: "" });
-  res.json({ message: "Signout success" });
-};
-
-export default {
-  signup: ctrlWrapper(signup),
-  signin: ctrlWrapper(signin),
-  getCurrent: ctrlWrapper(getCurrent),
-  signout: ctrlWrapper(signout),
-};
